--- a/tests/CascadeRepos.UnitTests/CascadeRepos.UnitTests.csproj
+++ b/tests/CascadeRepos.UnitTests/CascadeRepos.UnitTests.csproj
@@ -7,7 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-        <RootNamespace>Cascade.UnitTests</RootNamespace>
+        <RootNamespace>CascadeRepos.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
